refactor: replace Collectors.toList with Stream.toList and remove unused import